syntax = "proto3";

package golem.rib;

import "wasm/rpc/type.proto";

message RibInputType {
    map<string, wasm.rpc.Type> types = 1;
}